Bug 397770 - Cards don't autoplay to the foundations / deck in FreeCell
Summary: Cards don't autoplay to the foundations / deck in FreeCell
Status: RESOLVED FIXED
Alias: None
Product: kpat
Classification: Applications
Component: solver (other bugs)
Version First Reported In: 3.6
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Stephan Kulow
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-23 04:39 UTC by Pentti Nuutinen
Modified: 2025-06-03 19:07 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch to fix the problem (14.56 KB, patch)
2018-08-24 10:29 UTC, Shlomi Fish
Details
Newer patch with some cleanups. (13.96 KB, patch)
2018-08-24 16:47 UTC, Shlomi Fish
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pentti Nuutinen 2018-08-23 04:39:06 UTC
After the newest Chakra upgrade KPat Freecell dont automatically move cards to the deck.
Comment 1 Shlomi Fish 2018-08-24 08:22:07 UTC
This problem appears to have been introduced in commit ed0e53e0888da7123f4a0d2097f8da7fb105ca18 ( see https://phabricator.kde.org/D12415 ). I'll try to investigate.
Comment 2 Shlomi Fish 2018-08-24 10:29:40 UTC
Created attachment 114575 [details]
Patch to fix the problem

Tested and seems to be fine
Comment 3 Shlomi Fish 2018-08-24 10:30:33 UTC
Setting status to confirmed.
Comment 4 Shlomi Fish 2018-08-24 16:47:37 UTC
Created attachment 114586 [details]
Newer patch with some cleanups.
Comment 5 Albert Astals Cid 2018-08-28 21:40:40 UTC
Shlomi please use arc/phabricator for patches next time, it's better for reviews

I'll commit this.
Comment 6 Albert Astals Cid 2018-08-28 21:40:54 UTC
Git commit fac28f110c0a9c976677bee2d9d2126f93a711fd by Albert Astals Cid, on behalf of Shlomi Fish.
Committed on 28/08/2018 at 21:39.
Pushed by aacid into branch 'Applications/18.08'.

FreeCell: Restore cards autoplaying to foundation

M  +7    -5    patsolve/abstract_fc_solve_solver.cpp
M  +2    -2    patsolve/abstract_fc_solve_solver.h
M  +162  -118  patsolve/freecellsolver.cpp
M  +3    -3    patsolve/freecellsolver.h
M  +5    -0    patsolve/simonsolver.cpp
M  +1    -1    patsolve/simonsolver.h
M  +3    -0    patsolve/solverinterface.h

https://commits.kde.org/kpat/fac28f110c0a9c976677bee2d9d2126f93a711fd