FreeCell: Restore cards autoplaying to foundation

BUG: 397770